<resources>
    <string name="app_name">ChatApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wellcome_back">Wellcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login">Login</string>
    <string name="or_create_new_account">or create new account</string>
</resources>